# articles_materials

./: .env_template  .gitignore  README.md  pyproject.toml
embeddings_comparison/: run_comparison.ipynb
embeddings_comparison/utils/: caching.py  question_generation.py  storage.py  wiki_parser.py
embeddings_comparison/utils/embedding_models/: caching.py  hugging_face.py  open_ai.py  schema.py
embeddings_comparison/utils/llm_clients/: cached_client.py  open_ai_client.py
embeddings_comparison/utils/monitoring/: monitoring_service.py
embeddings_comparison/utils/translation_models/: hugging_face.py
embeddings_comparison/utils/vectordb/: vectordb.py
src/: OpenAI or Open-Source? Choosing the Right Embedding Model for Polish Text.ipynb  chart_utils.py  run_comparison.ipynb
src/utils/: caching.py  question_generation.py  storage.py  wiki_parser.py
src/utils/embedding_models/: caching.py  cost_monitoring.py  monitoring.py  open_ai.py  schema.py  tokenizer.py
src/utils/embedding_models/providers/: hugging_face.py  open_ai.py  supported_models.py
src/utils/llm_clients/: cached_client.py  cost_monitoring.py  open_ai_client.py  schema.py
src/utils/llm_clients/providers/: open_ai_client.py  supported_models.py
src/utils/monitoring/: monitoring_service.py
src/utils/vectordb/: vectordb.py
src/utils/wiki_parser/: schema.py  wiki_parser.py  wiki_sections_splitter.py
src/utils/wiki_parser/processors/: wiki_html_processor.py  wiki_markdown_processor.py
tests/: mocked_objects.py
tests/integrationtests/: test_data_generation.py  test_embedding_models.py
tests/unittests/utils/: test_llm_client_caching.py  test_storage.py  test_text_key_cache.py  test_wiki_parser.py
tests/unittests/utils/embedding_models/: test_embeddings_caching.py  test_embeddings_monitoring.py  test_tokenizer.py
tests/unittests/utils/llm_clients/: test_llm_client_caching.py  test_llm_monitoring.py
tests/unittests/utils/monitoring/: test_embedding_monitoring_service.py
tests/utils/: test_wiki_parser.py
tests/utils/embedding_models/: test_embeddings_caching.py
(+6 files in other folders)
