[tool.poetry]
name = "embeddings-comparison"
version = "0.1.0"
description = "Package for comparing embeddings"
authors = ["Andrey Pigarev <pigarev.a.g2014@gmail.com>"]
readme = "README.md"
packages = [{include = "*", from="src"}]

[tool.poetry.dependencies]
python = "^3.12"
openai = "1.54.3"
jupyter = "1.1.1"
python-dotenv = "1.0.1"
sentence-transformers = "3.2.1"
tqdm = "4.67.0"
protobuf = "5.28.3"
transformers = {version="4.46.2", extras=["sentencepiece"]}
wget = "3.2"
torch = "2.5.1"
beautifulsoup4 = "4.12.3"
lxml = "5.3.0"
types-beautifulsoup4 = "4.12.0.20241020"
tiktoken = "0.8.0"
faiss-cpu = "1.9.0"
pandas-stubs = "2.2.3.241009"
openpyxl = "3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
