[project]
name = "articles-materials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai==1.56.2",
    "jupyter==1.1.1",
    "python-dotenv==1.0.1",
    "sentence-transformers==3.2.1",
    "tqdm==4.67.0",
    "protobuf==5.28.3",
    "wget==3.2",
    "torch==2.5.1",
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    "types-beautifulsoup4==4.12.0.20241020",
    "tiktoken==0.8.0",
    "faiss-cpu==1.9.0",
    "pandas-stubs==2.2.3.241009",
    "openpyxl==3.1.5",
    "coverage==7.6.8",
    "matplotlib==3.9.3",
    "transformers[sentencepiece]==4.46.2",
    "pandas==2.2.3",
]
